--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,45 @@
-// TODO
+.posts {
+  .postCard {
+    margin-bottom: 3rem;
+
+    h2 {
+      margin-bottom: 1rem;
+      transition: color 0.2s;
+
+      &:hover {
+        color: var(--text-highlight);
+      }
+    }
+
+    .postResume {
+      margin-bottom: 1.25rem;
+    }
+
+    .info {
+      color: var(--text-info);
+
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+
+      span {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        p {
+          font-size: 0.875rem;
+        }
+      }
+    }
+  }
+}
+
+.loadMorePostsButton {
+  color: var(--text-highlight);
+  font-weight: 600;
+
+  border: none;
+  background: none;
+  font-size: 1.125rem;
+}
